--- a/index.html
+++ b/index.html
@@ -8,11 +8,27 @@
 :root{
  --bg:#f5f5f5;--card:#ffffff;--text:#000000;--border:#cccccc;--accent:#4caf50;--danger:#d9534f;--success:#28a745;--yellow:#fff200;--font:Arial,sans-serif;
 }
+
+/* --- STYLE WELCOME SCREEN (HANYA MUNCUL DI AWAL) --- */
+#welcomeScreen {
+    position: fixed; top: 0; left: 0; width: 100%; height: 100%; 
+    background: #000; color: #fff; z-index: 99999; 
+    display: flex; flex-direction: column; align-items: center; justify-content: center; text-align: center;
+}
+#welcomeScreen h1 { font-size: 2rem; color: #00ffcc; text-shadow: 0 0 10px #00ffcc; margin: 0 20px 10px; font-family: Arial, sans-serif; }
+#welcomeScreen p { font-size: 0.9rem; color: #aaa; text-transform: none; margin-bottom: 30px; font-family: Arial, sans-serif; }
+#welcomeInput { padding: 12px; width: 280px; border-radius: 8px; border: 2px solid #00ffcc; background: transparent; color: #fff; text-align: center; font-size: 1rem; outline: none; }
+#enterBtn { margin-top: 20px; padding: 12px 60px; background: #00ffcc; color: #000; font-weight: bold; border-radius: 8px; border: none; cursor: pointer; text-transform: uppercase; }
+
+/* --- STYLE MODAL PENGUNJUNG --- */
+#modalPengunjung { display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.9); z-index:3000; padding:20px; box-sizing:border-box; }
+.pengunjung-content { background:#fff; color:#000; padding:20px; border-radius:10px; max-width:600px; margin:0 auto; max-height:80vh; overflow-y:auto; }
+
+/* --- KODE SAKRAL LU DIBAWAH INI (TIDAK BERUBAH) --- */
 body{font-family:var(--font);background:var(--bg);margin:0;padding:20px;text-transform:uppercase;color:var(--text)}
 header{text-align:center;font-size:2rem;margin-bottom:5px}
 .update-info {text-align:center; font-size:0.85rem; color:#666; margin-bottom:10px; font-weight:normal; text-transform:none;}
 
-/* STYLE UNTUK RUNNING TEXT DEADLINE */
 #deadline-banner {
     background: #333; color: #fff; padding: 10px; margin: 10px 16px; 
     border-radius: 8px; font-weight: bold; overflow: hidden; white-space: nowrap;
@@ -37,20 +53,17 @@ button.warning{background:#f0ad4e;color:#fff;border:1px solid #fff}
 .block{margin:16px;padding:14px;background:var(--card);border-radius:14px;box-shadow:0 2px 8px rgba(0,0,0,.08);position:relative;transition:all 0.3s}
 .block h2{font-size:1.3rem;margin-bottom:10px;text-align:center}
 
-/* ANIMASI SEISMOGRAF (HANYA MUNCUL DI CYBERPUNK) */
 .pulse-line { display:none; height:2px; width:100%; background:linear-gradient(90deg, transparent, #00ffcc, #ff00ff, transparent); position:relative; margin-bottom:15px; overflow:hidden; }
 .pulse-line::after { content:""; position:absolute; left:-100%; width:100%; height:100%; background:linear-gradient(90deg, transparent, #fff, transparent); animation: pulse-move 2s infinite linear; }
 
 @keyframes pulse-move { 0% { left: -100%; } 100% { left: 100%; } }
 
-/* TABEL GRAND TOTAL WARNA */
 .grand-total-table{width:100%;border-collapse:collapse;margin-top:10px}
 .grand-total-table th, .grand-total-table td{border:1px solid var(--border);padding:8px;text-align:center;font-weight:700}
 #totalMasuk { background:var(--success); color:#fff; }
 #totalKeluar { background:var(--danger); color:#fff; }
 .saldo-akhir { background:var(--yellow); color:#000; }
 
-/* NOTE BOX & AUTO HEIGHT */
 .note-box {border:2px dashed var(--border); padding:20px; background:rgba(0,0,0,0.03); border-radius:12px; margin-top:20px;}
 #catatanWarga { width:100%; background:transparent; border:0; color:var(--text); font-family:inherit; font-size:1.1rem; resize:none; text-transform:none; min-height:50px; overflow:hidden; line-height:1.5; white-space: pre-wrap; word-wrap: break-word; display: block; }
 #catatanPrint { display: none; white-space: pre-wrap; font-size:1.1rem; line-height:1.5; text-transform:none; }
@@ -61,7 +74,6 @@ th{text-align:center; background:#eee; color:#000}
 input{padding:4px;border-radius:6px;border:1px solid #ccc;width:100%;box-sizing:border-box;text-transform:none;font-family:inherit}
 input[disabled]{background:transparent; color:var(--text); border:1px solid transparent}
 
-/* --- TEMA CYBERPUNK (BALIKIN LED & GLOW) --- */
 .theme-cyberpunk{--bg:#050505;--card:#0f0f0f;--text:#00ffcc;--border:#ff00ff;--accent:#ffff00;--yellow:#ffff00;}
 .theme-cyberpunk .pulse-line { display:block; }
 .theme-cyberpunk .block { border: 1px solid #00ffcc; box-shadow: 0 0 15px rgba(0,255,204,0.3); }
@@ -77,7 +89,6 @@ input[disabled]{background:transparent; color:var(--text); border:1px solid tran
 .theme-dark{--bg:#1e1e1e;--text:#eee;--card:#2a2a2a;--border:#444}
 .theme-blue{--bg:#eef4ff;--text:#102040;--card:#fff}
 
-/* MODAL CHECKLIST */
 #checklistModal { display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.9); z-index:2000; overflow-y:auto; padding:20px; box-sizing:border-box; }
 .checklist-content { background:#fff; color:#000; padding:20px; border-radius:10px; max-width:950px; margin:0 auto; }
 .checklist-content h1 { text-align:center; margin:0; font-size:1.5rem; background:#92c694; padding:10px; }
@@ -90,6 +101,21 @@ input[disabled]{background:transparent; color:var(--text); border:1px solid tran
 </style>
 </head>
 <body>
+
+<div id="welcomeScreen">
+    <h1>SELAMAT DATANG DI WEBSITE KAS GANG MAWAR 3</h1>
+    <p>Built and developed by Fajar Ilmanosa Viar &copy; 2026 . All Rights Reserved.</p>
+    <input type="text" id="welcomeInput" placeholder="Ketik Nama Anda...">
+    <button id="enterBtn" onclick="masukWeb()">ENTER</button>
+</div>
+
+<div id="modalPengunjung">
+    <div class="pengunjung-content">
+        <h2 style="text-align:center; border-bottom:2px solid #000; padding-bottom:10px;">DAFTAR PENGUNJUNG</h2>
+        <div id="listPengunjung" style="margin:20px 0; font-size:0.9rem;"></div>
+        <button onclick="document.getElementById('modalPengunjung').style.display='none'" style="width:100%; background:red; color:#fff;">TUTUP</button>
+    </div>
+</div>
 
 <header>
   LAPORAN KAS GANG MAWAR 3
@@ -109,6 +135,7 @@ input[disabled]{background:transparent; color:var(--text); border:1px solid tran
     <button class="main-menu" onclick="toggleMenu()">☰ MENU</button>
     <div class="menu-items" id="menuItems">
         <button id="adminBtn" class="off">ADMIN OFF</button>
+        <button id="listVisitorBtn" class="warning" style="display:none" onclick="openPengunjung()">DAFTAR PENGUNJUNG</button>
         <button id="pullBtn" class="warning" style="display:none">TARIK SALDO LALU</button>
         <button onclick="openChecklist()" class="primary">CHECKLIST KAS</button>
         <button id="themeBtn" class="primary">GANTI TEMA</button>
@@ -199,6 +226,53 @@ let isAdmin=false, autoSaveTimer=null, currentTheme='';
 const namaBulan=['JANUARI','FEBRUARI','MARET','APRIL','MEI','JUNI','JULI','AGUSTUS','SEPTEMBER','OKTOBER','NOVEMBER','DESEMBER'];
 const namaAnggota=['SISA KAS SEBELUMNYA','RIZAL','ROMI','TRI','ANIS','FAJAR DJAKA','FAJAR SHANUM','AGUS','LUKMAN','IRAWAN','RIAN','MULYADIE','HELDI','HILMAN','NANO','TEGUH'];
 
+// --- FUNGSI WELCOME SCREEN & LOG PENGUNJUNG ---
+function masukWeb() {
+    const nama = document.getElementById('welcomeInput').value.trim();
+    if (nama === "") {
+        alert("TULIS NAMA DULU!");
+        return;
+    }
+    
+    // Simpan ke Firebase Pengunjung
+    const skrgLog = new Date();
+    const tglLog = skrgLog.getDate() + " " + namaBulan[skrgLog.getMonth()] + " " + skrgLog.getFullYear();
+    const jamLog = skrgLog.getHours().toString().padStart(2,'0') + ":" + skrgLog.getMinutes().toString().padStart(2,'0');
+    
+    db.ref('pengunjung_situs').push({
+        nama: nama.toUpperCase(),
+        waktu: tglLog + ", PUKUL " + jamLog + " WIB"
+    });
+
+    // Hapus Welcome Screen agar tampilan balik ke Kode Sakral
+    document.getElementById('welcomeScreen').remove();
+    updateUI(); 
+    updateDeadlineBanner();
+}
+
+function openPengunjung() {
+    toggleMenu();
+    const modal = document.getElementById('modalPengunjung');
+    const list = document.getElementById('listPengunjung');
+    list.innerHTML = "Memuat daftar...";
+    modal.style.display = 'block';
+
+    db.ref('pengunjung_situs').limitToLast(50).once('value', s => {
+        const d = s.val();
+        if(d) {
+            let html = "<table style='width:100%; border-collapse:collapse;'>";
+            Object.values(d).reverse().forEach(v => {
+                html += `<tr style='border-bottom:1px solid #eee;'><td style='padding:5px;'><b>${v.nama}</b><br><small>${v.waktu}</small></td></tr>`;
+            });
+            html += "</table>";
+            list.innerHTML = html;
+        } else {
+            list.innerHTML = "Belum ada pengunjung.";
+        }
+    });
+}
+
+// --- KODE SAKRAL LU DIBAWAH INI (TIDAK BERUBAH) ---
 function autoHeight(elem) {
     elem.style.height = "1px";
     elem.style.height = (elem.scrollHeight) + "px";
@@ -257,7 +331,6 @@ function recalc(){
 
 function loadData(){
  buildTables();
- // LOAD DATA KAS BULANAN
  db.ref('kas_data/'+bulan+'-'+tahun).once('value', s=>{
   const d=s.val();
   if(d){
@@ -267,8 +340,6 @@ function loadData(){
   }
   recalc(); applyAdminLock();
  });
-
- // LOAD CATATAN GLOBAL (ABADI DI SEMUA BULAN)
  db.ref('kas_data/catatan_umum').once('value', snapshot => {
     const cat = snapshot.val();
     const ta = document.getElementById('catatanWarga');
@@ -289,15 +360,9 @@ function saveData(){
  const formatUpdate = tgl.getDate() + " " + namaBulan[tgl.getMonth()] + " " + tgl.getFullYear() + ", PUKUL " + tgl.getHours().toString().padStart(2,'0') + ":" + tgl.getMinutes().toString().padStart(2,'0') + " WIB";
  const m=[...document.querySelectorAll('#tbMasuk tr')].map(tr=>({tanggal:tr.children[0].firstChild.value, nama:tr.children[1].firstChild.value, ket:tr.children[2].firstChild.value, uang:tr.children[3].firstChild.value}));
  const k=[...document.querySelectorAll('#tbKeluar tr')].map(tr=>({tanggal:tr.children[0].firstChild.value, ket:tr.children[1].firstChild.value, qty:tr.children[2].firstChild.value, harga:tr.children[3].firstChild.value}));
- 
  const cat = document.getElementById('catatanWarga').value;
- 
- // SIMPAN DATA BULANAN
  db.ref('kas_data/'+bulan+'-'+tahun).update({masuk:m, keluar:k, updated:formatUpdate});
- 
- // SIMPAN CATATAN KE FOLDER GLOBAL
  db.ref('kas_data/catatan_umum').set(cat);
-
  document.getElementById('catatanPrint').innerText = cat;
  document.getElementById('lastUpdate').textContent = "TERAKHIR DI UPDATE PADA: " + formatUpdate;
 }
@@ -320,10 +385,9 @@ async function openChecklist() {
             if (d && d.masuk) {
                 const row = d.masuk.find(r => r.nama === nama);
                 if (row) {
-                    const ket = row.get ? row.ket.toUpperCase() : (row.ket||'').toUpperCase();
+                    const ket = (row.ket||'').toUpperCase();
                     const kuncis = ["LUNAS", "SUDAH BAYAR", "BAYAR TUNAI", "BAYAR TRANSFER"];
                     if (kuncis.some(k => ket.includes(k))) matrix[nama][m] = '✓';
-                    else if (ket.includes("BELUM BAYAR") || ket.trim() === "") matrix[nama][m] = 'X';
                 }
             }
         });
@@ -354,12 +418,14 @@ document.getElementById('adminBtn').onclick = function() {
   if(u && u.toUpperCase()==='ADMIN' && p && p.toUpperCase()==='SANUMION'){
    isAdmin=true; this.textContent='ADMIN ON'; this.className='primary';
    document.getElementById('pullBtn').style.display='block';
+   document.getElementById('listVisitorBtn').style.display='block';
    autoSaveTimer=setInterval(saveData, 3000);
    applyAdminLock(); recalc(); alert('LOGIN BERHASIL!');
   } else { alert('USER/PASS SALAH!'); }
  } else {
   isAdmin=false; this.textContent='ADMIN OFF'; this.className='off';
   document.getElementById('pullBtn').style.display='none';
+  document.getElementById('listVisitorBtn').style.display='none';
   clearInterval(autoSaveTimer); applyAdminLock();
  }
  toggleMenu();
@@ -416,8 +482,7 @@ document.getElementById('cetakBtn').onclick=()=>{
 };
 
 document.addEventListener('input', recalc);
-updateUI();
-updateDeadlineBanner();
+// updateUI & updateDeadlineBanner dipanggil di dalam masukWeb()
 </script>
 </body>
 </html>
