--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
  --bg:#f5f5f5;--card:#ffffff;--text:#000000;--border:#cccccc;--accent:#4caf50;--danger:#d9534f;--success:#28a745;--yellow:#fff200;--font:Arial,sans-serif;
 }
 
-/* --- STYLE WELCOME SCREEN (DIBUAT ANTI-ZOOM) --- */
+/* --- STYLE WELCOME SCREEN --- */
 #welcomeScreen {
     position: fixed; top: 0; left: 0; width: 100%; height: 100%; 
     background: #000; color: #fff; z-index: 99999; 
@@ -17,23 +17,18 @@
 }
 #welcomeScreen h1 { font-size: 2rem; color: #00ffcc; text-shadow: 0 0 10px #00ffcc; margin: 0 20px 10px; font-family: Arial, sans-serif; }
 #welcomeScreen p { font-size: 0.9rem; color: #aaa; text-transform: none; margin-bottom: 30px; font-family: Arial, sans-serif; }
-
-/* KUNCI ANTI ZOOM: FONT MINIMAL 16PX */
 #welcomeInput { 
     padding: 12px; width: 280px; border-radius: 8px; 
     border: 2px solid #00ffcc; background: transparent; 
-    color: #fff; text-align: center; 
-    font-size: 16px; /* Browser gak akan maksa zoom kalau sudah 16px */
-    outline: none; 
+    color: #fff; text-align: center; font-size: 16px; outline: none; 
 }
-
 #enterBtn { margin-top: 20px; padding: 12px 60px; background: #00ffcc; color: #000; font-weight: bold; border-radius: 8px; border: none; cursor: pointer; text-transform: uppercase; }
 
 /* --- STYLE MODAL PENGUNJUNG --- */
 #modalPengunjung { display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.9); z-index:3000; padding:20px; box-sizing:border-box; }
 .pengunjung-content { background:#fff; color:#000; padding:20px; border-radius:10px; max-width:600px; margin:0 auto; max-height:80vh; overflow-y:auto; }
 
-/* --- KODE SAKRAL LU (TIDAK BERUBAH) --- */
+/* --- KODE SAKRAL --- */
 body{font-family:var(--font);background:var(--bg);margin:0;padding:20px;text-transform:uppercase;color:var(--text)}
 header{text-align:center;font-size:2rem;margin-bottom:5px}
 .update-info {text-align:center; font-size:0.85rem; color:#666; margin-bottom:10px; font-weight:normal; text-transform:none;}
@@ -225,6 +220,10 @@ function masukWeb() {
         return;
     }
     
+    // RESET VIEWPORT AGAR TIDAK ZOOM IN
+    const vp = document.querySelector('meta[name="viewport"]');
+    vp.setAttribute('content', 'width=1024, initial-scale=1.0, maximum-scale=1.0, user-scalable=no');
+
     const skrgLog = new Date();
     const tglLog = skrgLog.getDate() + " " + namaBulan[skrgLog.getMonth()] + " " + skrgLog.getFullYear();
     const jamLog = skrgLog.getHours().toString().padStart(2,'0') + ":" + skrgLog.getMinutes().toString().padStart(2,'0');
@@ -235,8 +234,12 @@ function masukWeb() {
     });
 
     document.getElementById('welcomeScreen').remove();
-    // RESET LAYAR KE ATAS JIKA SEMPAT BERGESER
     window.scrollTo(0,0);
+
+    // Kembalikan ke viewport lebar 1024 setelah reset sukses
+    setTimeout(() => {
+        vp.setAttribute('content', 'width=1024');
+    }, 500);
 }
 
 function openPengunjung() {
